Commit changement getLast().